JEAP-6277 Remove warnings on startup of the CLI